syntax = "proto3";

package proto.resource;
option go_package="resourceproto";

message ZoneStatusGetReqProto {
	uint32 zoneID = 1;
}

message ZoneStatusGetRespProto {
	uint32 zoneID = 1;
	int32 zoneStatus = 2;
}

service GameIntrService {
  	rpc ZoneStatusGet(ZoneStatusGetReqProto) returns (ZoneStatusGetRespProto);
}